fixed columns and no forecast on small css

--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -14,6 +14,9 @@
     }
     /*----------- NAVIGATION --------------*/
     /*----------- MAIN --------------*/
+    section.forecasth2 {
+        display: inline;
+    }
     section.forecast {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
